# py-sim7600

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi-release.yml
docs/: about.md  about.rst  conf.py  index.md  index.rst
docs/api/: 00_device.rst  00_exception.rst  device.rst  exceptions.rst  index.rst  interface.rst
docs/api/controller/: index.rst  v25ter.rst
docs/api/device/: index.rst  sim7600.rst
docs/api/interface/: auto_device.rst  index.rst
docs/api/model/: call.rst  enums.rst  index.rst  sim_me.rst
docs/interface/: 00_device.rst  index.rst
docs/usage/: concurrency.rst  index.rst  quickstart.rst
py_sim7600/: __init__.py  _command_lists.py  call_control.py  device.py  error.py  exceptions.py  gprs.py  interface.py  network.py  phonebook.py  sim_application_toolkit.py  status_control.py  v25ter.py
py_sim7600/controller/: __init__.py  call_control.py  gprs.py  network.py  phonebook.py  sim_application_toolkit.py  status_control.py  v25ter.py
py_sim7600/device/: __init__.py  sim7600.py
py_sim7600/interface/: __init__.py  auto_device.py
py_sim7600/model/: call.py  enums.py  signal_quality.py  sim_me.py
tests/unit_test/: __init__.py  conftest.py  test_device.py
tests/unit_test/controller/: test_call_control.py  test_status_control.py  test_v25ter.py
tests/unit_test/model/: test_call.py  test_signal_quality.py
