[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-sim7600"
version = "0.1.0"
authors = [
    { name = "Firefox2100", email = "wangyunze16@gmail.com" },
]
description = "A pure python package to communicate with SIM7600 modems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Telephony",
]

[project.urls]
"Homepage" = "https://github.com/Firefox2100/py-sim7600"
"Bug Tracker" = "https://github.com/Firefox2100/py-sim7600/issues"